fix builds